fix: ajust age validation; change favicon

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "myNewApp": {
+    "CTSaraAmorim": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "myNewApp:build:production"
+              "buildTarget": "CTSaraAmorim:build:production"
             },
             "development": {
-              "buildTarget": "myNewApp:build:development"
+              "buildTarget": "CTSaraAmorim:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -81,7 +81,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "myNewApp:build"
+            "buildTarget": "CTSaraAmorim:build"
           }
         },
         "test": {
